# url-shortener-scalable

./: .dockerignore  .env  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.original  LOAD_BALANCER.md  README.md  docker-compose-decoupled.yml  docker-compose-lb.yml  docker-compose.yml  init-postgres.sql  nginx-decoupled.conf  nginx-lb.conf  pgbouncer.ini  postgresql.conf  pyproject.toml  pytest.ini
.claude/: production-deployment-plan.md
ansible/: ansible.cfg  cleanup.yml  debug_web.sh  fix_celery.sh  playbook.yml  populate_inventory.py  redeploy.sh
ansible/group_vars/: all.yml
ansible/inventory/: hosts.yml
app/: Dockerfile  main.py
app/core/: celery_app.py  config.py  redis_client.py
app/db/: __init__.py
app/models/: schemas.py
app/routes/: monitoring.py  urls.py
app/services/: url_service.py
app/tasks/: prepopulate_db.py  (+1 more)
create_service/: Dockerfile  main.py
infra/: Pulumi.yaml  README.md  __main__.py  ansible_config.py
k6/: MONGODB_PERFORMANCE_ANALYSIS.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_RESULTS.md  QUICKSTART.md  README.md  docker-compose-k6.yml
monitoring/: docker-compose-monitoring.yml  otel-collector-config.yaml  promtail-config.yaml
nginx/: nginx-decoupled.conf  nginx-lb.conf
redirect-service-go/: .dockerignore  .gitignore  Dockerfile  go.mod  go.sum
redirect_service/: Dockerfile  main.py
scripts/: cleanup_mongodb.sh  generate-pgbouncer-auth.sh
tests/: __init__.py  conftest.py  test_api.py  test_create_service.py  test_error_handling.py  test_integration.py  test_load_balancer.py  test_redirect_service.py  test_utils.py  test_worker_service.py
worker_service/: Dockerfile  celery_app.py
(+116 files in other folders)
